CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
PROJECT(low_pass_filter_library)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/ThirdPartyLibraries/kfr/include)
INCLUDE_DIRECTORIES($ENV{JAVA_HOME}/include)
INCLUDE_DIRECTORIES($ENV{JAVA_HOME}/include/win32)
file(GLOB low_pass_SRC
"${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
)

ADD_LIBRARY(kftKasierFilter SHARED ${low_pass_SRC})

SET(TARGET_DIR ${CMAKE_CURRENT_SOURCE_DIR}/lib)

INSTALL(TARGETS kftKasierFilter  DESTINATION ${TARGET_DIR})